# QorKernel

./: .gitignore  README.md
qor-core/: Cargo.toml
qor-core/src/: lib.rs  logging.rs
qor-core/src/drivers/: block.rs  mod.rs  plic.rs  timer.rs  uart.rs
qor-core/src/fs/ext2/: mod.rs  raw.rs
qor-core/src/interfaces/: bytes.rs  mmio.rs  mod.rs
qor-core/src/interfaces/fs/: descriptor.rs  empty.rs  errors.rs  interface.rs  mod.rs  structures.rs  vfs.rs
qor-core/src/memory/: mod.rs  units.rs
qor-core/src/memory/allocators/byte/: mod.rs
qor-core/src/memory/allocators/page/: bitmap.rs  bump.rs
qor-core/src/structures/: id.rs  mem.rs  mod.rs  syscall_error.rs  time.rs
qor-core/src/structures/elf/: enums.rs  flags.rs  mod.rs  raw.rs  structures.rs
qor-core/src/sync/: mod.rs  mutex.rs
qor-core/src/tasks/: executor.rs  mod.rs  task.rs  timer.rs  yield.rs
qor-core/src/utils/: bitmap.rs  mod.rs  parser.rs  rawstr.rs
qor-os/: Cargo.toml
qor-os/.cargo/: config
qor-os/src/: kprint.rs  main.rs  panic.rs
qor-os/src/asm/: boot.s  mem.s  mod.rs  switch_to_user.s  trap.s
qor-os/src/drivers/: interrupts.rs  mod.rs
qor-os/src/drivers/virtio/: mod.rs
qor-os/src/drivers/virtio/block/: driver.rs  mod.rs  (+3 more)
qor-os/src/fs/: mod.rs
qor-os/src/lds/: virt.lds
qor-os/src/memory/: bitmap.rs  bump.rs  byte.rs  mmu.rs  mod.rs
qor-os/src/process/: memory.rs  mod.rs  proc_interface.rs
qor-os/src/syscalls/: handler.rs  mod.rs  structures.rs
qor-os/src/syscalls/handlers/: write.rs
qor-os/src/trap/: external.rs  handle.rs  mod.rs  structures.rs
qor-riscv/: Cargo.toml
qor-riscv/src/: lib.rs
qor-riscv/src/drivers/: mod.rs
qor-riscv/src/drivers/clint/: interface.rs  mod.rs  raw.rs
qor-riscv/src/drivers/plic/: interface.rs  mod.rs  raw.rs  structures.rs
qor-riscv/src/drivers/uart/: interface.rs  mod.rs  raw.rs
qor-riscv/src/drivers/virtio/: mod.rs
qor-riscv/src/memory/: mod.rs  page.rs
qor-riscv/src/memory/mmu/: addresses.rs  entry.rs  mod.rs  table.rs
qor-riscv/src/trap/: frame.rs  mod.rs
(+5 files in other folders)
