[package]
name = "qor-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std=[]
alloc=[]
default=["std", "alloc"]

[dependencies]
async-trait = "0.1.74"
atomic = "0.6.0"
atomic_ref = "0.2.1"
const_format = "0.2.31"
