[package]
name = "qor-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[profile.release]
debug = true

[dependencies]
atomic_ref = "0.2.1"
const_format = "0.2.31"
qor-core = {default-features = false, path="../qor-core", features=["alloc"]}
qor-riscv = {path="../qor-riscv"}
