[package]
name = "qor-riscv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std=[]

[dependencies]
atomic = "0.6.0"
paste = "1.0.14"
qor-core={default-features = false, path="../qor-core", features=["alloc"]}
riscv = "0.10.1"
static_assertions = "1.1.0"
